--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -6,7 +6,8 @@ RUN apt-get update  \
     && docker-php-ext-install pdo pdo_mysql
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
+##
+# set timezone
 ENV TZ=Asia/Ho_Chi_Minh
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
@@ -17,10 +18,13 @@ WORKDIR /mnt/code
 ##
 # stage for development
 FROM build-base AS build-dev
-##
+
 # add packages for the development state
 RUN pecl install xdebug \
     && docker-php-ext-enable xdebug
+
+# update user www-data with userid = 1000
+RUN usermod -u 1000 www-data
 
 COPY docker/php-fpm/custom-xdebug.ini /usr/local/etc/php/conf.d/custom-xdebug.ini
 COPY docker/php-fpm/custom-php.ini /usr/local/etc/php/conf.d/custom-php.ini
