--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "8088:80"
+    depends_on:
+        db:
+            condition: service_healthy
 
   app:
     build:
@@ -19,6 +22,9 @@ services:
     volumes:
       - ../:/mnt/code
       - ./php-fpm/custom-xdebug.ini:/usr/local/etc/php/conf.d/custom-xdebug.ini
+    depends_on:
+        db:
+            condition: service_healthy
 
   db:
     image: mysql:8.0
@@ -31,5 +37,10 @@ services:
       MYSQL_PASSWORD: secrete
     volumes:
       - ./database/dumps:/docker-entrypoint-initdb.d
+    healthcheck:
+        test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+        interval: 15s
+        timeout: 10s
+        retries: 50
 
 
