--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,3 +6,4 @@ parameters:
     checkMissingIterableValueType: false
     ignoreErrors:
     	- '#Call to an undefined static method *#'
+    	- '#Access to an undefined property App\\Models\\*#'
