update docker file

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,6 +15,9 @@ services:
 
   app:
     build:
+      args:
+          USER_ID: 1000
+          GROUP_ID: 1000
       context: ../
       dockerfile: docker/php-fpm/Dockerfile
       target: build-dev
